src/components/Popover/Popover.scss
.react-tiny-popover-container {
  z-index: 99999;
  overflow: hidden !important;
  max-width: 95vw;
  min-height: 0px;
  max-height: 95vh;

  .popover-container-content {
    background: var(--react-autoql-background-color-secondary);
    z-index: 99999 !important;
    padding: 10px;
    flex: 1;
  }

  &.popover-with-arrow-container {
    box-shadow: none;
    border: none;
    background-color: transparent;
    padding: 0 !important;

    .popover-arrow-container {
      border-radius: 4px;
      height: 100%;
      width: 100%;
      display: flex;

      .popover-arrow-container-content {
        display: flex;
        flex-direction: column;
        flex: 1;
      }
    }

    .popover-container-content {
      box-shadow: 0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
      background-color: var(--react-autoql-background-color-secondary);
      border: 1px solid #ababab52;
      border-radius: 4px;
      display: flex;
      flex-direction: column;
      justify-content: stretch;
      padding: 10px;
      box-sizing: border-box;
      flex: 1;
    }

    .popover-arrow {
      border-bottom: 10px solid var(--react-autoql-border-color) !important;
      top: 1px !important;
      opacity: 1;
      z-index: 999999;

      &::after {
        content: '';
        position: absolute;
        border-left: 9px solid transparent;
        border-right: 9px solid transparent;
        border-bottom: 9px solid var(--react-autoql-background-color-secondary);
        top: 1px;
        left: -9px;
      }
    }
  }

  &:not(.popover-with-arrow-container) {
    box-shadow: 0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
    background-color: var(--react-autoql-background-color-secondary);
    border: 1px solid #ababab52;
    border-radius: 4px;
    display: flex;
  }

  &.react-autoql-popover-mobile {
    display: flex;

    left: 0px !important;
    right: 0px !important;
    top: 45% !important;
    transform: translate(0, -50%) !important;

    width: 100vw !important;
    max-width: 100vw !important;
    padding: 0 !important;
    min-height: 45px;
    max-height: calc(100vh - 150px);
    border-radius: 0 !important;

    background: var(--react-autoql-background-color-secondary);
    box-shadow: 0px 0px 100vh 100vh var(--react-autoql-mobile-mask-color, rgba(0, 0, 0, 0.15)),
      0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));

    animation: fade 0.2s ease;

    .popover-container-content {
      border-radius: 0 !important;
    }
  }
}

@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

